add frontend validation to auth